# ChangeLog for dev-python/pyside
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/pyside/ChangeLog,v 1.16 2011/03/20 20:05:31 chiiph Exp $

*pyside-1.0.0 (20 Mar 2011)

  20 Mar 2011; Tomas Touceda <chiiph@gentoo.org> +pyside-1.0.0.ebuild:
  Version bump

  29 Dec 2010; Dominik Kapusta <ayoy@gentoo.org> pyside-0.4.2.ebuild:
  Specifying correct dependency on Python (bug #345531).

  23 Dec 2010; Dominik Kapusta <ayoy@gentoo.org> pyside-0.4.2.ebuild,
  +files/pyside-cmake-namespace.patch:
  Add patch to fix namespace issue in cmake files (bug #348632). Thanks to
  tarek for the patch.

*pyside-0.4.2 (25 Nov 2010)

  25 Nov 2010; Tomas Touceda <chiiph@gentoo.org> -pyside-0.3.2.ebuild,
  -pyside-0.4.0-r1.ebuild, +pyside-0.4.2.ebuild:
  Version bump, remove old and restrict tests wrt bug 338485

*pyside-0.4.0-r1 (25 Aug 2010)

  25 Aug 2010; Dominik Kapusta <ayoy@gentoo.org> -pyside-0.4.0.ebuild,
  +pyside-0.4.0-r1.ebuild, +files/pyside-find-kde-phonon.patch,
  -files/pyside-qtscripttools.patch:
  Adding patch to find KDE phonon, removing obsolete qtscripttools patch.

  24 Aug 2010; Dominik Kapusta <ayoy@gentoo.org> -pyside-0.2.2.ebuild,
  -pyside-0.2.3-r1.ebuild:
  Removing old versions

*pyside-0.4.0 (24 Aug 2010)

  24 Aug 2010; Dominik Kapusta <ayoy@gentoo.org> +pyside-0.4.0.ebuild:
  Version bump

  23 Jun 2010; Markos Chandras <hwoarang@gentoo.org> pyside-0.3.2.ebuild:
  Introduce kde use flag to handle the phonon dependencies wrt bug #324429

*pyside-0.3.2 (16 Jun 2010)

  16 Jun 2010; Dominik Kapusta <ayoy@gentoo.org> +pyside-0.3.2.ebuild:
  Version bump

*pyside-0.2.3-r1 (01 Feb 2010)

  01 Feb 2010; Dominik Kapusta <ayoy@gentoo.org> -pyside-0.2.3.ebuild,
  +pyside-0.2.3-r1.ebuild:
  Fix cmake module install path (bug #302411)

  26 Jan 2010; Dominik Kapusta <ayoy@gentoo.org> pyside-0.2.3.ebuild:
  Update Boost deps in CMakeLists.txt and perform better check for